--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header__row">
             <div class="logo">
-                <a href="#"><img src="./../img/logo/Style-main.png" alt="Logo" style="height: 40px;"></a>
+                <a href="#"><img src="./img/logo/Style-main.png" alt="Logo" style="height: 40px;"></a>
             </div>
             <nav class="navbar">
                 <ul>
@@ -41,7 +41,7 @@
                     Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. </p>
                 <button class="hero-btn">Try for free</button>
             </div>
-            <img src="./../img/main-screen.png" alt="Chart">
+            <img src="./img/main-screen.png" alt="Chart">
         </section>
     </div>
 </header>
@@ -68,7 +68,7 @@
         </p>
         <div class="features-row">
             <div class="mini-card">
-                <img src="./../img/icons/clock.png" alt="Clock Icon">
+                <img src="./img/icons/clock.png" alt="Clock Icon">
                 <h2>
                     Monitoring 24/7
                 </h2>
@@ -78,7 +78,7 @@
                 </p>
             </div>
             <div class="mini-card">
-                <img src="./../img/icons/display.png" alt="Display Icon">
+                <img src="./img/icons/display.png" alt="Display Icon">
                 <h2>
                     Widget System
                 </h2>
@@ -88,7 +88,7 @@
                 </p>
             </div>
             <div class="mini-card">
-                <img src="./../img/icons/rocket.png" alt="Rocket Icon">
+                <img src="./img/icons/rocket.png" alt="Rocket Icon">
                 <h2>
                     Best Performance
                 </h2>
@@ -114,11 +114,11 @@
                     Vitae et, tortor pulvinar risus pulvinar sit amet.
                 </p>
             </div>
-            <img src="./../img/diagrams/radar-chart.png" alt="Radar Chart Image">
+            <img src="./img/diagrams/radar-chart.png" alt="Radar Chart Image">
         </div>
 
         <div class="box">
-            <img src="./../img/diagrams/grouped-bar-chart.png" alt="Grouped Bar Chart Image">
+            <img src="./img/diagrams/grouped-bar-chart.png" alt="Grouped Bar Chart Image">
             <div class="info">
                 <h1>
                     Fully customizable to address your needs 
@@ -144,7 +144,7 @@
                     Vitae et, tortor pulvinar risus pulvinar sit amet.
                 </p>
             </div>
-            <img src="./../img/diagrams/calendar.png" alt="Calendar Image">
+            <img src="./img/diagrams/calendar.png" alt="Calendar Image">
         </div>
     </section>
 </div>
@@ -190,7 +190,7 @@
             <hr>
             <div class="footer-content">
                 <div class="logo">
-                    <a href="#"><img src="./../img/logo/Style-footer.png" alt="Logo" style="height: 30px;"></a>
+                    <a href="#"><img src="./img/logo/Style-footer.png" alt="Logo" style="height: 30px;"></a>
                 </div>
                 <ul>
                     <li><a href="!#">Product</a></li>
@@ -199,9 +199,9 @@
                     <li><a href="!#">Blog</a></li>
                 </ul>
                 <div class="other-links">
-                    <a href="https://www.facebook.com/" target="_blank"><img src="../../img/icons/Facebook.png" alt="Facebook Icon"></a>
-                    <a href="https://www.twitter.com/" target="_blank"><img src="../../img/icons/Twitter.png" alt="Twitter Icon"></a>
-                    <a href="https://www.instagram.com/" target="_blank"><img src="../../img/icons/Instagram.png" alt="Instagram Icon"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="./img/icons/Facebook.png" alt="Facebook Icon"></a>
+                    <a href="https://www.twitter.com/" target="_blank"><img src="./img/icons/Twitter.png" alt="Twitter Icon"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="./img/icons/Instagram.png" alt="Instagram Icon"></a>
                 </div>
             </div>
         </footer>
